# lightnode

./: .eslintrc.json  .gitguardian.yaml  .gitignore  .vercelignore  CONTRIBUTING.md  DEPLOY.md  LICENSE  README.md  SECURITY.md  next.config.ts  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vitest.config.ts
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  release.yml
app/: error.tsx  globals.css  layout.tsx  loading.tsx  manifest.ts  not-found.tsx  page.tsx  robots.ts  sitemap.ts
app/api/analytics/: route.ts
app/api/download/: route.ts
app/api/gw/[net]/[...path]/: route.ts
app/api/leaderboard/: route.ts
app/api/models/: route.ts
app/api/network/: route.ts
app/api/sdk-demo/: route.ts
app/api/version/: route.ts
app/api/worker/: route.ts
app/api/worker/settlement/: route.ts
app/dashboard/: page.tsx
app/guide/: page.tsx
app/network/: page.tsx
app/onboard/: page.tsx
app/playground/: page.tsx
app/recover/: page.tsx
app/worker/[address]/: page.tsx
components/: auto-update.tsx  chain-guard.tsx  cli-runner.tsx  code-block.tsx  connect-button.tsx  desktop-home-redirect.tsx  download-button.tsx  download-desktop.tsx  hardware-requirements.tsx  hero-preview.tsx  hide-on-desktop.tsx  home-hero-cta.tsx  live-stats.tsx  model-analytics.tsx  models-panel.tsx  nav.tsx  network-health.tsx  network-toggle.tsx  operations-panel.tsx  os-icons.tsx  providers.tsx  recover-keys.tsx  remember-toggle.tsx  speed-test-result.tsx  stake-amount.tsx  theme-toggle.tsx  update-models.tsx  watch-grid.tsx  web-only.tsx  withdraw-worker.tsx  worker-alerts.tsx  worker-health-panel.tsx  worker-view.tsx
components/onboard/: install-progress.tsx  machine-check.tsx  model-picker.tsx  one-click-install.tsx  setup-guide.tsx  verify-worker.tsx
components/ui/: badge.tsx  button.tsx  card.tsx  icon-chip.tsx  radial-gauge.tsx
create-lightnode-app/: README.md  package-lock.json  package.json  tsconfig.json
create-lightnode-app/src/: index.ts  templates.ts
desktop/: .gitignore  README.md  package-lock.json  package.json
desktop/frontend/: index.html
desktop/src-tauri/: Cargo.toml  Entitlements.plist  build.rs  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/permissions/autogenerated/: detect_hardware.toml  generate_worker_key.toml  run_command_streamed.toml  secret_delete.toml  secret_get.toml  secret_set.toml
desktop/src-tauri/src/: main.rs
docs/: ARCHITECTURE.md  RELEASING.md  UI_AND_DESIGN.md  WORKER_LIFECYCLE.md
examples/hono-server/: README.md  server.ts
examples/nextjs-api-route/: README.md  route.ts
examples/quickstart-inference/: README.md  index.ts  package.json  tsconfig.json
lib/: analytics.ts  budget.ts  hardware.ts  idb-keyval-localstorage.ts  install-log.ts  install-progress.ts  network-context.tsx  network.ts  onchain-status.ts  os-detect.ts  saved-workers.ts  scriptgen.ts  secrets.ts  speedtest.ts  subgraph.ts  tauri.ts  utils.ts  wagmi.ts  wallet-storage.ts  worker-health.ts
sdk/: .gitignore  README.md  package.json  tsconfig.json
sdk/src/: add.ts  analytics.ts  bridge.ts  chat.ts  cli.ts  crypto.ts  dao.ts  errors.ts  gateway.ts  index.ts  inference.ts  networks.ts  onchain-models.ts  onchain.ts  subgraph.ts  types.ts  worker.ts
tests/e2e/: smoke.spec.ts
tests/unit/: analytics.test.ts  hardware.test.ts  install-log.test.ts  install-progress.test.ts  onchain-status.test.ts  scriptgen.test.ts  sdk-consistency.test.ts  sdk-crypto.test.ts  sdk.test.ts  secrets.test.ts  speedtest.test.ts  subgraph.test.ts  utils.test.ts  worker-health.test.ts
