[package]
name = "lightnode-desktop"
version = "0.1.0"
description = "LightNode - one-click LightChain AI worker onboarding"
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.33"

# OS-native secret store for the worker key + keystore password (Keychain on
# macOS, Credential Manager on Windows, Secret Service on Linux). Backend is
# selected per target so each OS uses its native store and the Linux build
# stays pure-Rust (no system OpenSSL/dbus dev deps).
[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", features = ["apple-native"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3", features = ["windows-native"] }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3", features = ["sync-secret-service", "crypto-rust"] }

[profile.release]
opt-level = "s"
lto = true
strip = true
